# gen-dashboard

./: .gitignore  Makefile  README.md  SMART_REFINEMENT_FRONTEND_INTEGRATION.md  docker-compose.yml  enhancements.md  mkdocs.yml  overview.md  refine_plan.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  check_dependencies.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env.py  generate_encryption_key.py  pyproject.toml  requirements_prod.txt  setup_admin_user.py  startup_checks.sh
backend/geojsons/: arunachal_pradesh_districts.geojson  chandigarh_districts.geojson  daman_diu_districts.geojson  delhi_districts.geojson  goa_districts.geojson  haryana_districts.geojson  himachal_pradesh_districts.geojson  india.geojson  jammu_kashmir_districts.geojson  kerala_districts.geojson  ladakh_districts.geojson  lakshadweep_districts.geojson  manipur_districts.geojson  meghalaya_districts.geojson  puducherry_districts.geojson  sikkim_districts.geojson  tripura_districts.geojson  uttarakhand_districts.geojson  west_bengal_districts.geojson
backend/langchain_agents/: README.md  TECHNICAL_DETAILS.md  __init__.py  llm_utils.py  state.py
backend/prompts/: DATA_AGENT_SYSTEM.txt  LAYOUT_AGENT_SYSTEM.txt  REACT_TTS_SYSTEM.txt  STRATEGY_AGENT_SYSTEM.txt  VIZ_SPEC_AGENT_SYSTEM.txt  __init__.py  prompts.py
backend/routes/: __init__.py  auth.py  dashboard.py  database.py  language.py  root.py
backend/services/: geojson_service.py  llm.py  local_python_interpreter.py  python_iterpreters.py  sse_utils.py
backend/tests/: test_llm.py  (+3 more)
(+133 files in other folders)
