[project]
name = "backend"
version = "0.1.0"
description = "AI Dashboard Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "boto3==1.40.69",
    "fastapi==0.115.12",
    "gradio==5.29.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "litellm>=1.0.0",
    "matplotlib==3.10.1",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "passlib[bcrypt]==1.7.4",
    "pillow==10.4.0",
    "plotly==6.3.1",
    "psycopg2-binary==2.9.11",
    "pydantic==2.11.7",
    "pymongo==4.11.3",
    "pymysql==1.1.2",
    "python-dotenv==1.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "rich==14.0.0",
    "scipy>=1.16.3",
    "sqlalchemy==2.0.44",
    "tenacity==9.1.2",
    "uvicorn==0.34.0",
    "xlrd==2.0.2",
]
